package com.ZhangRuo.pkm.enums;

/*
* 定义了支持的笔记导出方式
* 目前仅支持纯文本格式
* */

public enum ExportFormat {
    /*
    * 纯文本格式（.txt）
    * */
    TEXT
}
